--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 <header>
-    <h1>Practica 1</h1>
+    <h1>Header</h1>
 </header>
 <main>
-    <p>Practica 1</p>
+    <p>Main</p>
 </main>
 <footer>
+    <p>Footer</p>
     <p>Derechos Reservados</p>
     <p>Hecho con <span>&hearts;</span> por <a href="https://rsessa.es">Richard Sessa</p>
 </footer>
