iniciando paginas principales

--- a/carta.html
+++ b/carta.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <h1>Inicio</h1>
+    <h1>Carta</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
